# xp-game-engine

./: .gitignore  Cargo.toml  README.md  build.rs  config.ron  rustfmt.toml
blender/: arrow.blend  axis.blend  ground-plane-20x20.blend  ground-plane-20x20.blend1
game/: Cargo.toml
game/src/: camera.rs  client.rs  command_queue.rs  commands.rs  configuration.rs  counter.rs  entities.rs  entity.rs  from_config.rs  graphics.rs  input.rs  lib.rs  local_client.rs  main.rs  mesh.rs  obj.rs  packet.rs  process_input.rs  recording.rs  shader-debug.vert  shader_clipmap.frag  shader_clipmap.vert  simulation.rs  terrain.rs  transformation.rs
game/src/client/: client.rs  command.rs  local_client.rs  mod.rs  recording.rs
game/src/configuration/: mod.rs
game/src/graphics/: clipmap.rs  debug.rs  default.rs  default_renderer.rs  error.rs  helpers.rs  mesh.rs  mesh_debug.rs  mod.rs  regular.rs  texture.rs  ui.rs
game/src/input/: input_handler.rs  mod.rs  mouse_keyboard.rs  player_input_state.rs
game/src/physics/: mod.rs
game/src/scene/: cameras.rs  entities.rs  mod.rs
game/src/shaders/: shader-debug.frag  shader-debug.vert  shader.frag  shader_clipmap.frag  shader_clipmap.vert  shader_ui.vert
game/src/terrain/: fbm.rs  generator.rs  mod.rs  sine.rs
game/src/ui/: widgets.rs
game/src/window_input/: events.rs  input_handler.rs  input_state.rs  mod.rs  window_event.rs
game/src/winit_impl/: mod.rs  winit_handler.rs
low_poly/: Cargo.toml
low_poly_nice_graphics/: Cargo.toml  TODO
low_poly_nice_graphics/src/: cameras.rs  entity.rs  main.rs  static_camera.rs  terrain.rs
low_poly_nice_graphics/src/assets/: assets.rs  handle.rs  mod.rs
low_poly_nice_graphics/src/controllers/: camera_controller.rs  character_controller.rs  mod.rs
low_poly_nice_graphics/src/entity/: entity.rs  mod.rs
low_poly_nice_graphics/src/generators/: terrain.rs
low_poly_nice_graphics/src/gltf/: loader.rs
low_poly_nice_graphics/src/input/: event.rs  input.rs  keyboard.rs  mod.rs  mouse.rs
low_poly_nice_graphics/src/mesh/: mesh.rs  mod.rs
low_poly_nice_graphics/src/physics/: collisionshape.rs  mod.rs  physics.rs
low_poly_nice_graphics/src/registry/: handle.rs  mod.rs  registry.rs
low_poly_nice_graphics/src/renderer/: bindgroup.rs  camera.rs  depth_texture.rs  light.rs  light_bindgroup.rs  light_pipeline.rs  mod.rs  pipeline.rs  pipeline_bindgroup.rs  pipeline_light.rs  renderer.rs  shape.rs  uniforms.rs  vertex.rs  vertex_buffer.rs
low_poly_nice_graphics/src/renderer/mesh/: mesh.rs  mod.rs  shape.rs  vertex.rs  vertex_buffer.rs
low_poly_nice_graphics/src/renderer/shaders/: light_shader.frag  light_shader.vert  shader.frag  shader.vert  shader.wgsl
low_poly_nice_graphics/src/tile/: loader.rs  mod.rs  tile.rs
low_poly_nice_graphics/src/tiles/: loaderror.rs  mod.rs  tile_loader.rs
low_poly_nice_graphics/src/transform/: transform.rs
low_poly_nice_graphics/src/vox/: mod.rs  vox_loader.rs
low_poly_nice_graphics/src/voxel/: mod.rs  vox_loader.rs
low_poly_nice_graphics/src/winit_impl/: converters.rs  keyboard_handler.rs  mod.rs  winit_input_handler.rs
low_poly_nice_graphics/src/world/: chunks.rs  heightmap_loader.rs  mod.rs  tile_loader.rs  world.rs  world_loaderror.rs
rts/: Cargo.toml  TODO
sdlwindow/: CMakeLists.txt
sdlwindow/src/: sdlwindow.cpp
src/: camera.rs  canvas.rs  client.rs  command_queue.rs  commandqueue.rs  commands.rs  counter.rs  entity.rs  eventqueue.rs  graphics.rs  input.rs  inputhandler.rs  inputqueue.rs  lib.rs  local_client.rs  main.rs  mat.rs  matrix.rs  obj.rs  packet.rs  physics.rs  rasterizer.rs  recording.rs  sdlwindow.rs  (+10 more)
windowing/: CMakeLists.txt
windowing/src/: window.cpp  windowing.cpp
(+80 files in other folders)
