[package]
name = "software-renderer-rs"
version = "0.1.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"
build="build.rs"

[dependencies]
libc = "0.2.69"
image = "0.23.4"
nalgebra-glm = "0.7.0"
serde = { version = "1.0.106", features = ["derive"] }

[build-dependencies]
cmake = "0.1.42"
