[package]
name = "game"
version = "0.3.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"

[dependencies]
libc = "0.2.69"
image = "0.23.4"
nalgebra-glm = "0.7.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_cbor = "0.11.1"
byteorder = "1.3.4"
structopt = { version = "0.3", default-features = false }
crc32fast = "1.2.0"
tobj = "2.0.1"
wgpu_glyph = "0.10.0"

winit = "0.22.2"
wgpu = "0.6.0"
futures = "0.3.4"
glsl-to-spirv = "0.1.7"
bytemuck = "1.2.0"
noise = "0.6.0"

xp-ui = { path = "../xp-ui" }

