[package]
name = "low_poly_nice_graphics"
version = "0.1.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"

[dependencies]
noise = "0.7"
winit = "0.24"
wgpu = "0.7"
glsl-to-spirv = "0.1.7"
bytemuck = "1.5.0"
glam = "0.12"
futures = "0.3"
gltf = "0.15.2"
base64 = "0.13.0"
image = "0.23"
